--- a/breadcrumbs/pubspec.yaml
+++ b/breadcrumbs/pubspec.yaml
@@ -23,7 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  firebase_auth: ^0.16.1
+  firebase_database: ^3.1.6
+  path_provider: 0.4.1
+  barcode_scan: ^0.0.4
+  qr_flutter:
+    git:
+      url: git://github.com/lukef/qr.flutter.git
+      ref: 2.0.0-dev.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +51,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
