--- a/breadcrumbs/pubspec.yaml
+++ b/breadcrumbs/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   
+  gradient_app_bar: ^0.0.1
+  bubble_tab_indicator: "^0.1.4"
   firebase_auth: ^0.16.1
   firebase_database: ^3.1.6
   path_provider: 0.4.1
