--- a/breadcrumbs/pubspec.yaml
+++ b/breadcrumbs/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   
   gradient_app_bar: ^0.0.1
+  animated_dialog_box: ^0.0.2
   bubble_tab_indicator: "^0.1.4"
   firebase_auth: ^0.16.1
   firebase_database: ^3.1.6
