--- a/breadcrumbs/pubspec.yaml
+++ b/breadcrumbs/pubspec.yaml
@@ -41,7 +41,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.5"
   flutter_test:
     sdk: flutter
 
