--- a/breadcrumbs/.gitignore
+++ b/breadcrumbs/.gitignore
@@ -14,8 +14,9 @@
 *.ipr
 *.iws
 .idea/
-
-GoogleService-Info.plist
+*.GoogleService-Info.plist
+**/GoogleService-Info.plist/
+*/GoogleService-Info.plist/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
