--- a/breadcrumbs/ios/.gitignore
+++ b/breadcrumbs/ios/.gitignore
@@ -25,6 +25,7 @@ Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
 *.GoogleService-Info.plist
+**/ios/GoogleService-Info.plist
 
 # Exceptions to above rules.
 !default.mode1v3
